--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
 body {
   background: black;
 }
-
-#canvas1 {
+#container {
   position: absolute;
+  width: 800px;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  border: 3px solid white;
+}
+#canvas1 {
+  position: relative;
   border: 3px solid white;
   width: 800px;
   height: 700px;
